Fix the locations drop down cut off in news pages
close #5

--- a/sites/all/themes/vonesc/sass/_views.scss
+++ b/sites/all/themes/vonesc/sass/_views.scss
@@ -192,6 +192,10 @@
         font-size:0.7em;
     }
 }
+#block-system-main .view-news-container
+{
+    padding-bottom: 160px;
+}
 
 
 .view-programs-list
